<resources>
    <string name="app_name">Kalkulator</string>
    <string name="bksp">BKSP</string>
    <string name="c">C</string>
    <string name="sign_change">SC</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="period">.</string>
</resources>
