<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_advanced_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kalkulator.AdvancedCalculatorActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/equation_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/bksp_button"
            app:layout_row="0"
            app:layout_column="0"
            android:text="@string/bksp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/c_button"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            android:text="@string/c"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/sign_change_button"
            app:layout_row="0"
            app:layout_column="3"
            android:text="@string/sign_change"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>


        <Button
            android:id="@+id/sqrt"
            app:layout_row="2"
            app:layout_column="0"
            android:text="sqrt"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/power_of_two"
            app:layout_row="2"
            app:layout_column="1"
            android:text="x^2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/exponentation"
            app:layout_row="2"
            app:layout_column="2"
            android:text="x^y"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/log"
            app:layout_row="2"
            app:layout_column="3"
            android:text="log"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>


        <Button
            android:id="@+id/sin"
            app:layout_row="1"
            app:layout_column="0"
            android:text="sin"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/cos"
            app:layout_row="1"
            app:layout_column="1"
            android:text="cos"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/tan"
            app:layout_row="1"
            app:layout_column="2"
            android:text="tan"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/ln"
            app:layout_row="1"
            app:layout_column="3"
            android:text="ln"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/division_button"
            app:layout_row="3"
            app:layout_column="3"
            android:text="@string/division"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/multiplication_button"
            app:layout_row="4"
            app:layout_column="3"
            android:text="@string/multiplication"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/subtraction_button"
            app:layout_row="5"
            app:layout_column="3"
            android:text="@string/subtraction"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/addition_button"
            app:layout_row="6"
            app:layout_column="3"
            android:text="@string/addition"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>



        <Button
            android:id="@+id/equals_button"
            app:layout_row="6"
            app:layout_column="2"
            android:text="@string/equals"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/period_button"
            app:layout_row="6"
            app:layout_column="1"
            android:text="@string/period"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
        <Button
            android:id="@+id/zero"
            app:layout_row="6"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="0"/>

        <android.support.v7.widget.GridLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/number_pad_grid"
            app:layout_row="3"
            app:layout_column="0"
            app:columnCount="3"
            app:rowCount="3"
            app:layout_columnSpan="3"
            app:layout_rowSpan="3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

        </android.support.v7.widget.GridLayout>

    </android.support.v7.widget.GridLayout>

</LinearLayout>
